# cranecloud-cli

./: .env-example  .gitignore  .snapignore  LICENSE  README.md  config.py  main.py  makefile  mlops_test_notebook.ipynb  pyproject.toml  requirements-snap.txt  requirements.txt  requirements_detailed.txt  setup.md  setup.py
.github/workflows/: publish.yml  snap.yml
Formula/: cranecloud.rb
app/: __init__.py
app/commands/: apps.py  clusters.py  projects.py  user_management.py
cranecloud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cranecloud_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
snap/: snapcraft.yaml
src/: config.py
src/cranecloud/: __init__.py  config.py
src/cranecloud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cranecloud/commands/: apps.py  clusters.py  config_management.py  ml_ops.py  projects.py  test_user_management.py  user_management.py
src/cranecloud/core/: ml_ops.py
src/cranecloud/helpers/: __init__.py
src/cranecloud/utils/: __init__.py  config.py
